[project]
name = "class-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.185.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.46.0",
    "mcp[cli]>=1.19.0",
    "pydantic[email]>=2.12.3",
    "webcolors>=24.11.1",
]
